# GetModuleVersion

./: CMakeLists.txt  GetModuleVersion.c
